# Protect-transcription

./: .gitignore  CLAUDE.md  Dockerfile  README.md  app.css.src  app.py  pyproject.toml  requirements-dev.txt  requirements.txt  tailwind.config.js
.github/workflows/: docker-image.yml
app/: __init__.py  broadcast.py  config.py  database.py  models.py  protect.py  summaries.py  transcription.py  worker.py
app/routes/: analytics.py  export.py  settings.py  summaries.py  sync.py  transcriptions.py  webhook.py  ws.py
static/: app.css.src  app.js
templates/: index.html
tests/: conftest.py  test_api_health.py  test_api_settings.py  test_api_transcriptions.py  test_database.py  test_transcription.py  test_worker.py
